feat : 혜택 내역 조회 애플리케이션 기능 구현