@@ -2,12 +2,16 @@ package christmas.domain.order;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import christmas.domain.common.Date;
 import christmas.domain.common.Money;
+import christmas.domain.discount.DiscountResult;
+import christmas.domain.discount.policy.ChristmasDDayDiscountPolicy;
 import christmas.domain.menu.Menu;
 import christmas.domain.menu.specific.BeverageMenu;
 import christmas.domain.menu.specific.MainMenu;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import java.util.Collections;
 import java.util.List;
 
 class OrderTest {
@@ -15,19 +19,19 @@ class OrderTest {
     @DisplayName("생성 테스트")
     @Test
     void create() {
-        Order order = Order.from(List.of(
+        Order order = Order.of(List.of(
                 OrderLineItem.of(MainMenu.of("까르보나라", 1_000), 2),
                 OrderLineItem.of(MainMenu.of("불닭까르보나라", 1_000), 2)
-        ));
+        ), Collections.emptyList());
     }
 
     @DisplayName("할인 이전 총 주문 금액을 계산할 수 있다.")
     @Test
     void calculateTotalPrice() {
-        Order order = Order.from(List.of(
+        Order order = Order.of(List.of(
                 OrderLineItem.of(MainMenu.of("까르보나라", 1_000), 2),
                 OrderLineItem.of(MainMenu.of("불닭까르보나라", 1_000), 2)
-        ));
+        ), Collections.emptyList());
 
         Money result = order.calculateTotalPrice();
 
@@ -38,8 +42,9 @@ class OrderTest {
     @DisplayName("할인 전 총주문 금액이 12만 원 이상일 때, 샴페인 1개를 증정한다.")
     @Test
     void presentMenu() {
-        Order order = Order.from(List.of(
-                OrderLineItem.of(MainMenu.of("까르보나라", 100_000), 2)));
+        Order order = Order.of(List.of(
+                OrderLineItem.of(MainMenu.of("까르보나라", 100_000), 2)
+        ), Collections.emptyList());
 
         Menu result = order.present(BeverageMenu.of("샴페인", 2_000));
 
@@ -49,13 +54,38 @@ class OrderTest {
     @DisplayName("할인 전 총주문 금액이 12만 원보다 낮다면, 아무것도 증정하지 않는다.")
     @Test
     void presentEmptyMenu() {
-        Order order = Order.from(List.of(
+        Order order = Order.of(List.of(
                 OrderLineItem.of(MainMenu.of("까르보나라", 1_000), 2),
                 OrderLineItem.of(MainMenu.of("불닭까르보나라", 1_000), 2)
-        ));
+        ), Collections.emptyList());
 
         Menu result = order.present(BeverageMenu.of("샴페인", 2_000));
 
         assertThat(result.getName()).isEmpty();
+    }
+
+    @DisplayName("모든 할인 적용 결과를 조회할 수 있다.")
+    @Test
+    void calculateDiscountBenefit() {
+        Order order = Order.of(List.of(
+                OrderLineItem.of(MainMenu.of("까르보나라", 1_000), 2),
+                OrderLineItem.of(MainMenu.of("불닭까르보나라", 10_000), 2)
+        ), List.of(new ChristmasDDayDiscountPolicy()));
+
+        List<DiscountResult> result = order.calculateDiscountBenefit(Date.from(25));
+
+        assertThat(result).containsExactly(new DiscountResult("크리스마스 디데이 할인", Money.from(-3_400)));
+    }
+
+    @DisplayName("총주문 금액 10,000원 이상인 경우에만 혜택을 적용할 수 있다.")
+    @Test
+    void checkDiscountBenefitCondition() {
+        Order order = Order.of(List.of(
+                OrderLineItem.of(MainMenu.of("까르보나라", 1_000), 9)
+        ), List.of(new ChristmasDDayDiscountPolicy()));
+
+        List<DiscountResult> result = order.calculateDiscountBenefit(Date.from(25));
+
+        assertThat(result).isEmpty();
     }
 }
